completed the test for user and wallet services